--- a/css/indexNEW.css
+++ b/css/indexNEW.css
@@ -4,7 +4,7 @@ html, body, h1, h2, h3, h4, p, ol, ul, li, a{
   margin: 0;
 }
 body {
-	background-image: url(file:///Users/Julia/Documents/GoTopTen/GTT Rep/img/topten.jpg);	
+	background-image: url(file:///Users/Julia/Documents/GoTopTen/GTTRep/img/topten.jpg);	
 }
 
 h1 {
