--- a/css/indexNEW.css
+++ b/css/indexNEW.css
@@ -40,13 +40,15 @@ h3 {
       text-align: right;
       padding: 18px 30px 0px 0px;
 }
-h4 {
-	text-align: center;
-	font-size: 44px;
-	padding-top: 70px;
+.main {
+	margin-top: 250px;
 }
-h5 {
+p {
+	position: relative;
 	text-align: center;
-	font-size: 24px;
-	padding-top: 70px;
+	font-size: 40px;
+	font-weight: 400;
+	margin-top: 40px;
+	color: #eeeeee;
+	font-family: "Comic Sans MS";
 }
